First attempt integrating Resume Theme, attempt at fixing tititle wrapping

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -162,6 +162,7 @@ hr.small {
 .intro-header .page-heading h1 {
   margin-top: 0;
   font-size: 42px;
+  white-space: nowrap;
 }
 .intro-header .site-heading .subheading,
 .intro-header .page-heading .subheading {
